ci: diagnostic snapshot for run 25360852761 [skip ci]